# Agent

./: .env  FEATURES.md  INSTALL.md  PROJECT_STATUS.md  README.md  README_ENHANCED.md  WARP.md  chainlit.md  chainlit_app.py  plan.md  pyproject.toml  pyrightconfig.json  requirements.txt  run_dev.ps1  start.bat  test_new_api.py
.chainlit/: config.toml
backend/: main.py  requirements.txt  start.sh
backend/app/: enhanced_routes.py
frontend/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/: AnimatedFormattedMessage.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  CodeBlock.tsx  LoadingScreen.tsx  ProcessingSquare.tsx  ShareModal.tsx  TypewriterText.tsx
frontend/src/lib/: api.ts
src/: agent.py  enhanced_agent.py
src/utils/: memory_manager.py  prompt_manager.py
