[project]
name = "agent"
version = "0.1.0"
description = "A simple AI agent using OpenAI SDK with Gemini API"
requires-python = ">=3.8.1"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "chainlit>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 